--- a/app/src/main/res/menu/post_list_item_menu.xml
+++ b/app/src/main/res/menu/post_list_item_menu.xml
@@ -2,14 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/action_delete"
-        android:title="@string/delete_post_item_menu"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_edit"
-        android:title="Edit"
-        app:showAsAction="never"
-        />
 
+    <group android:id="@+id/post_modification">
+        <item
+            android:id="@+id/action_delete"
+            android:title="@string/delete_post_item_menu"
+            app:showAsAction="never" />
+        <item
+            android:id="@+id/action_edit"
+            android:title="@string/edit_post_item_menu"
+            app:showAsAction="never" />
+    </group>
 </menu>
