BuildConfig not working2

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
         android:id="@+id/nav_posts_fragment"
         android:name="ru.netology.nework.ui.PostFragment"
         android:label="Posts"
-        tools:layout="@layout/fragment_post" >
+        tools:layout="@layout/fragment_posts" >
         <action
             android:id="@+id/action_nav_posts_fragment_to_createEditPostFragment"
             app:destination="@id/createEditPostFragment" />
