Posts, likes/ but have a mistake

--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -1,99 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/common_spacing"
-    tools:context=".ui.RegistrationFragment">
+    android:fillViewport="true">
 
-    <EditText
-        android:id="@+id/user_name_Et"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:autofillHints="User name"
-        android:hint="@string/et_registration_hint_registrationFragment"
-        android:inputType="text"
-        android:lines="1"
-        app:layout_constraintBottom_toTopOf="@+id/user_login_Et"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        tools:layout_editor_absoluteX="16dp" />
+        android:padding="@dimen/common_spacing"
+        tools:context=".ui.RegistrationFragment">
 
-    <EditText
-        android:id="@+id/user_login_Et"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:autofillHints="User name"
-        android:hint="@string/et_login_hint_loginFragment"
-        android:inputType="textEmailAddress"
-        android:lines="1"
-        app:layout_constraintBottom_toTopOf="@+id/password_Et"
-        app:layout_constraintTop_toBottomOf="@+id/user_name_Et"
-        tools:layout_editor_absoluteX="16dp" />
+        <EditText
+            android:id="@+id/user_name_Et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autofillHints="User name"
+            android:hint="@string/et_registration_hint_registrationFragment"
+            android:inputType="text"
+            android:lines="1"
+            app:layout_constraintBottom_toTopOf="@+id/user_login_Et"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:layout_editor_absoluteX="16dp" />
 
-    <EditText
-        android:id="@+id/password_Et"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:autofillHints="Password"
-        android:hint="@string/et_password_hint_loginFragment"
-        android:inputType="textPassword"
-        android:lines="1"
-        app:layout_constraintBottom_toTopOf="@+id/confirm_password_Et"
-        app:layout_constraintTop_toBottomOf="@+id/user_login_Et"
-        tools:layout_editor_absoluteX="16dp" />
+        <EditText
+            android:id="@+id/user_login_Et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autofillHints="User name"
+            android:hint="@string/et_login_hint_loginFragment"
+            android:inputType="textEmailAddress"
+            android:lines="1"
+            app:layout_constraintBottom_toTopOf="@+id/password_Et"
+            app:layout_constraintTop_toBottomOf="@+id/user_name_Et"
+            tools:layout_editor_absoluteX="16dp" />
 
-    <EditText
-        android:id="@+id/confirm_password_Et"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:autofillHints="User name"
-        android:hint="@string/et_confirm_password_hint_registrationFragment"
-        android:inputType="textPassword"
-        android:lines="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_Et"
-        tools:layout_editor_absoluteX="16dp" />
+        <EditText
+            android:id="@+id/password_Et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autofillHints="Password"
+            android:hint="@string/et_password_hint_loginFragment"
+            android:inputType="textPassword"
+            android:lines="1"
+            app:layout_constraintBottom_toTopOf="@+id/confirm_password_Et"
+            app:layout_constraintTop_toBottomOf="@+id/user_login_Et"
+            tools:layout_editor_absoluteX="16dp" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/signUp_bt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/common_spacing"
-        android:text="@string/bt_signUp_registration_fragment"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/confirm_password_Et" />
+        <EditText
+            android:id="@+id/confirm_password_Et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autofillHints="User name"
+            android:hint="@string/et_confirm_password_hint_registrationFragment"
+            android:inputType="textPassword"
+            android:lines="1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/password_Et"
+            tools:layout_editor_absoluteX="16dp" />
 
-    <TextView
-        android:id="@+id/tv_new_account_request"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/tv_is_signed_in_request_registration_fragment"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signUp_bt" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/signUp_bt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/common_spacing"
+            android:text="@string/bt_signUp_registration_fragment"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/confirm_password_Et" />
 
-    <TextView
-        android:id="@+id/tv_create_new_account"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_new_account_request"
-        tools:text="@string/tv_signIn_span_action_registration_fragment" />
+        <TextView
+            android:id="@+id/tv_new_account_request"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/tv_is_signed_in_request_registration_fragment"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/signUp_bt" />
 
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/tv_create_new_account"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_new_account_request"
+            tools:text="@string/tv_signIn_span_action_registration_fragment" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
