--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
         android:id="@+id/nav_posts_fragment"
         android:name="ru.netology.nework.ui.PostFragment"
         android:label="Posts"
-        tools:layout="@layout/fragment_posts" >
+        tools:layout="@layout/fragment_posts">
         <action
             android:id="@+id/action_nav_posts_fragment_to_createEditPostFragment"
             app:destination="@id/createEditPostFragment" />
@@ -22,7 +22,7 @@
         android:id="@+id/nav_profile_fragment"
         android:name="ru.netology.nework.ui.ProfileFragment"
         android:label="Profile"
-        tools:layout="@layout/fragment_profile" >
+        tools:layout="@layout/fragment_profile">
         <action
             android:id="@+id/action_nav_profile_fragment_to_nav_posts_fragment"
             app:destination="@id/nav_posts_fragment"
@@ -32,23 +32,24 @@
         android:id="@+id/createEditPostFragment"
         android:name="ru.netology.nework.ui.CreatePostFragment"
         android:label="Create post"
-        tools:layout="@layout/fragment_create_edit_post_menu" >
-    </fragment>
+        tools:layout="@layout/fragment_create_edit_post_menu"></fragment>
     <fragment
         android:id="@+id/logInFragment"
         android:name="ru.netology.nework.ui.LogInFragment"
         android:label="Sign In"
         tools:layout="@layout/fragment_log_in">
-        <action
-            android:id="@+id/action_logInFragment_to_nav_events_fragment"
-            app:destination="@id/nav_events_fragment"
-            app:popUpTo="@id/nav_posts_fragment" />
+
         <action
             android:id="@+id/action_logInFragment_to_registrationFragment"
             app:destination="@id/registrationFragment"
             app:launchSingleTop="true"
             app:popUpTo="@id/registrationFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_logInFragment_to_nav_posts_fragment"
+            app:destination="@id/nav_posts_fragment"
+            app:launchSingleTop="false"
+            app:popUpTo="@id/nav_posts_fragment" />
     </fragment>
     <fragment
         android:id="@+id/registrationFragment"
@@ -61,9 +62,5 @@
             app:launchSingleTop="true"
             app:popUpTo="@id/logInFragment"
             app:popUpToInclusive="true" />
-        <action
-            android:id="@+id/action_registrationFragment_to_nav_events_fragment"
-            app:destination="@id/nav_events_fragment"
-            app:popUpTo="@id/nav_posts_fragment" />
     </fragment>
 </navigation>
