CRUD, like, participate , not finished

--- a/app/src/main/res/menu/fragment_post_menu.xml
+++ b/app/src/main/res/menu/fragment_post_menu.xml
@@ -2,9 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_add_post"
+        android:id="@+id/action_save"
+        android:contentDescription="@string/save_button_description"
         android:icon="@drawable/ic_add_circle_24"
-        android:contentDescription="@string/create_post_button_description"
-        app:showAsAction="always"
-        android:title="@string/create_post_button_title" />
+        android:iconTint="@color/white"
+        android:title="@string/save_button_title"
+        app:showAsAction="always" />
 </menu>
