--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,4 +28,13 @@
     <style name="Widget.AppTheme.LikeCheckBox" parent="Widget.MaterialComponents.Button.TextButton.Icon">
         <item name="tint">@color/like_checkbox_tint</item>
     </style>
+
+    <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">32sp</item>
+
+    </style>
+
+    <style name="Widget.AppTheme.EventParticipateCheckBox" parent="Widget.MaterialComponents.Button.TextButton.Icon">
+        <item name="tint">@color/event_participation_check_box</item>
+    </style>
 </resources>
