--- a/app/src/main/res/layout/event_list_item.xml
+++ b/app/src/main/res/layout/event_list_item.xml
@@ -40,7 +40,7 @@
         tools:text="12/23/07 at 15:00" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/bt_post_options"
+        android:id="@+id/bt_event_options"
         style="@style/Widget.AppTheme.IconButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -75,6 +75,49 @@
         app:barrierDirection="bottom"
         app:constraint_referenced_ids="tv_content" />
 
+    <ImageView
+        android:id="@+id/iV_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="8dp"
+        android:paddingBottom="4dp"
+        android:contentDescription="@string/iv_date_icon_description"
+        android:src="@drawable/ic_calendar_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/footer" />
+
+    <TextView
+        android:id="@+id/tv_event_due_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@id/iV_date"
+        app:layout_constraintTop_toTopOf="@id/iV_date"
+        app:layout_constraintBottom_toBottomOf="@id/iV_date"
+        tools:text="22/11/22, 13:00" />
+
+    <ImageView
+        android:id="@+id/iV_event_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/iv_event_type_icon_description"
+        tools:src="@drawable/ic_event_type_online"
+        app:layout_constraintStart_toStartOf="parent"
+        android:paddingBottom="8dp"
+        app:layout_constraintTop_toBottomOf="@id/iV_date" />
+
+    <TextView
+        android:id="@+id/tv_event_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@id/iV_event_type"
+        app:layout_constraintTop_toTopOf="@id/iV_event_type"
+        app:layout_constraintBottom_toBottomOf="@id/iV_event_type"
+        tools:text="online" />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/bt_like"
         style="@style/Widget.AppTheme.LikeCheckBox"
@@ -83,7 +126,20 @@
         android:checkable="true"
         app:icon="@drawable/ic_like_24_dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/footer"
+        app:layout_constraintTop_toBottomOf="@id/iV_event_type"
+        tools:checked="true"
+        tools:text="23" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/bt_participate"
+        style="@style/Widget.AppTheme.EventParticipateCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checkable="true"
+        app:icon="@drawable/ic_event_participation_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/bt_like"
+        app:layout_constraintBottom_toBottomOf="@id/bt_like"
         tools:checked="true"
         tools:text="23" />
 </androidx.constraintlayout.widget.ConstraintLayout>
