--- a/app/src/main/res/menu/list_item_menu.xml
+++ b/app/src/main/res/menu/list_item_menu.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-
-    <group android:id="@+id/post_modification">
+    <group android:id="@+id/list_item_modification">
         <item
             android:id="@+id/action_delete"
             android:title="@string/delete_post_item_menu"
             app:showAsAction="never" />
+
         <item
             android:id="@+id/action_edit"
             android:title="@string/edit_post_item_menu"
