--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -4,41 +4,64 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/nav_posts_fragment">
+
     <fragment
         android:id="@+id/nav_posts_fragment"
         android:name="ru.netology.nework.ui.PostFragment"
-        android:label="Posts"
+        android:label="@string/post_fragment_title"
         tools:layout="@layout/fragment_posts">
         <action
             android:id="@+id/action_nav_posts_fragment_to_createEditPostFragment"
-            app:destination="@id/createEditPostFragment" />
+            app:destination="@id/createEditPostFragment"
+            app:popUpTo="@id/nav_posts_fragment" />
+        <action
+            android:id="@+id/action_nav_posts_fragment_to_nav_profile_fragment"
+            app:destination="@id/nav_profile_fragment" />
     </fragment>
     <fragment
         android:id="@+id/nav_events_fragment"
         android:name="ru.netology.nework.ui.EventsFragment"
-        android:label="Events"
-        tools:layout="@layout/fragment_events" />
+        android:label="@string/events_fragment_title"
+        tools:layout="@layout/fragment_events">
+        <action
+            android:id="@+id/action_nav_events_fragment_to_createEventFragment"
+            app:destination="@id/createEventFragment"
+            app:popUpTo="@id/nav_events_fragment" />
+        <action
+            android:id="@+id/action_nav_events_fragment_to_nav_profile_fragment"
+            app:destination="@id/nav_profile_fragment" />
+        <action
+            android:id="@+id/action_nav_events_fragment_to_eventParticipantsFragment"
+            app:destination="@id/eventParticipantsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/nav_profile_fragment"
         android:name="ru.netology.nework.ui.ProfileFragment"
-        android:label="Profile"
+        android:label="@string/profile_fragment_title"
         tools:layout="@layout/fragment_profile">
         <action
             android:id="@+id/action_nav_profile_fragment_to_nav_posts_fragment"
             app:destination="@id/nav_posts_fragment"
             app:popUpTo="@id/nav_posts_fragment" />
+        <argument
+            android:name="authorId"
+            android:defaultValue="-1L"
+            app:argType="long" />
+        <action
+            android:id="@+id/action_nav_profile_fragment_to_createEditPostFragment"
+            app:destination="@id/createEditPostFragment"
+            app:popUpTo="@id/nav_profile_fragment" />
     </fragment>
     <fragment
         android:id="@+id/createEditPostFragment"
         android:name="ru.netology.nework.ui.CreatePostFragment"
-        android:label="Create post"
-        tools:layout="@layout/fragment_create_edit_post_menu"></fragment>
+        android:label="@string/create_post_fragment_title"
+        tools:layout="@layout/fragment_create_post"></fragment>
     <fragment
         android:id="@+id/logInFragment"
         android:name="ru.netology.nework.ui.LogInFragment"
-        android:label="Sign In"
+        android:label="@string/sign_in_fragment_title"
         tools:layout="@layout/fragment_log_in">
-
         <action
             android:id="@+id/action_logInFragment_to_registrationFragment"
             app:destination="@id/registrationFragment"
@@ -54,7 +77,7 @@
     <fragment
         android:id="@+id/registrationFragment"
         android:name="ru.netology.nework.ui.RegistrationFragment"
-        android:label="Sign Up"
+        android:label="@string/sign_up_fragment_title"
         tools:layout="@layout/fragment_registration">
         <action
             android:id="@+id/action_registrationFragment_to_logInFragment"
@@ -62,5 +85,30 @@
             app:launchSingleTop="true"
             app:popUpTo="@id/logInFragment"
             app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/createEventFragment"
+        android:name="ru.netology.nework.ui.CreateEventFragment"
+        android:label="@string/cereate_event_fragment_title"
+        tools:layout="@layout/fragment_create_event" />
+    <fragment
+        android:id="@+id/nav_users_fragment"
+        android:name="ru.netology.nework.ui.UsersFragment"
+        android:label="@string/users_fragment_title"
+        tools:layout="@layout/fragment_all_users">
+        <action
+            android:id="@+id/action_usersFragment_to_nav_profile_fragment"
+            app:destination="@id/nav_profile_fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/eventParticipantsFragment"
+        android:name="ru.netology.nework.ui.EventParticipantsFragment"
+        android:label="@string/event_participants_fragment_tite">
+        <action
+            android:id="@+id/action_eventParticipantsFragment_to_nav_profile_fragment"
+            app:destination="@id/nav_profile_fragment" />
+        <argument
+            android:name="eventId"
+            app:argType="long" />
     </fragment>
 </navigation>
